// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileBar component profilebar shapshots have different email 1`] = `
<div fragment="1ceef7fe24">
  <div class="v-menu v-menu--inline" fragment="1ceef7fe24">
    <div class="v-menu__activator"><button type="button" class="v-btn v-btn--flat theme--light">
        <div class="v-btn__content">
          example@mail.ru
          <i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div>
      </button></div>
    <div class="v-menu__content theme--light " style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;">
      <div class="v-list theme--light">
        <div><a class="v-list__tile v-list__tile--link theme--light"><a class="black--text">Dashboard</a></a></div>
        <div><a class="v-list__tile v-list__tile--link theme--light">
            <div class="v-list__tile__title">Logout</div>
          </a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileBar component profilebar shapshots have different email 2`] = `
<div fragment="1ceef7fe24">
  <div class="v-menu v-menu--inline" fragment="1ceef7fe24">
    <div class="v-menu__activator"><button type="button" class="v-btn v-btn--flat theme--light">
        <div class="v-btn__content">
          newexample.@mail.ru
          <i aria-hidden="true" class="v-icon material-icons theme--light">more_vert</i></div>
      </button></div>
    <div class="v-menu__content theme--light " style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;">
      <div class="v-list theme--light">
        <div><a class="v-list__tile v-list__tile--link theme--light"><a class="black--text">Dashboard</a></a></div>
        <div><a class="v-list__tile v-list__tile--link theme--light">
            <div class="v-list__tile__title">Logout</div>
          </a></div>
      </div>
    </div>
  </div>
</div>
`;
